# Chaty

./: .gitignore  LICENSE.txt  README.md
BigClient/: BigClient.pro  BigClient_zh_CN.ts  mainwindow.ui
BigServer/: BufferQueue.c  CMakeLists.txt  Clients.c  Groups.c  User.c  main.c  oldClients  relevant.c
BigServer/BufferQueue/: BufferQueue.c
BigServer/Client/: Client.c
BigServer/DataStructure/: ArrayList.c  CQueue.c  Hash.c  HashList.c  Queue.c  Stack.c  Tree.c
BigServer/Database/: User.c
BigServer/FileData/: MemoryToFile.c
BigServer/FileServer/: FileServer.c
BigServer/packageFrom/: BufQueue.c  messageQueue.c
BigServerPLUS/: CMakeLists.txt
Chaty/: Chaty.pro  groupitem.cpp  groupitem.h  groupitem.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profile.ui  src.qrc
Gclient/: Gclient.pro  commondata.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QTclient/: QTclient.pro  QTclient_zh_CN.ts  commondata.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mythread.cpp  mythread.h
build-Chaty-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Chaty-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
build-Chaty-Desktop_Qt_5_14_2_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Chaty-Desktop_Qt_5_14_2_MinGW_64_bit-Release/release/: moc_mainwindow.cpp
build-Gclient/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-QTclient-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-QTclient-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-QTclient-Desktop_Qt_5_14_2_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release
chatTogetherForWindows/: chatTogetherForWindows.c  chatTogetherForWindows.cpp  chatTogetherForWindows.sln  chatTogetherForWindows.vcxproj  chatTogetherForWindows.vcxproj.filters
client/: CMakeLists.txt  commondata.h  main.c  user.h
core/: CMakeLists.txt  main.c
learning/: CMakeLists.txt  amil2.c  context.cpp  context.h  email.cpp  main.c  memory.cpp  processPrivileges.cpp  test.lua
server/: CMakeLists.txt  README.md  client.c  client.h  commondata.h  main.c  test.c  user.c  user.h
server-mul/: CMakeLists.txt  client.c  client.h  commondata.h  main.c  messagequeue.c  messagequeue.h  user.c  user.h
server-mul-mul/: CMakeLists.txt  client.h  commondata.h  main.c  messagequeue.c
serverPlus/: CMakeLists.txt
untitled/: CMakeLists.txt  main.c  main.cpp
untitled1/: CMakeLists.txt  main.c
untitled2/: CMakeLists.txt  main.c
utils/: CMakeLists.txt  main.c
utils/DataStructure/: Queue.c  Stack.c  Tree.c
utils/FileData/: MemoryToFile.c
(+52 files in other folders)
